# hospital-management-system

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Docs/: Project-management.md  address.md
data/: appointments.csv  doctors.csv  doctorsHistory.csv  drivers.csv  driversHistory.csv  nurses.csv  nursesHistory.csv  patients.csv  patientsHistory.csv
include/: H00_00_GLOBAL.h  H01_01_PERSON.h  H02_02_ADDRESS.h  H03_03_DOCTOR.h  H04_04_HOSPITAL.h  H05_05_NURSE.h  H06_06_DRIVER.h  H07_07_PATIENT.h  H08_08_APPOINTMENT.h  H09_09_AMBULANCE.h
src/: H00_00_GLOBAL.cpp  H01_01_PERSON.cpp  H02_02_ADDRESS.cpp  H03_03_DOCTOR.cpp  H04_04_HOSPITAL.cpp  H05_05_NURSE.cpp  H06_06_DRIVER.cpp  H07_07_PATIENT.cpp  H08_08_APPOINTMENT.cpp  H09_09_AMBULANCE.cpp
